--- a/quan ly/Base.lproj/Main.storyboard
+++ b/quan ly/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
         <!--Create Class View Controller-->
         <scene sceneID="gbo-9J-wRK">
             <objects>
-                <viewController storyboardIdentifier="CreateClassViewController" id="hLo-GP-A2Y" customClass="CreateClassViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateClassViewController" id="hLo-GP-A2Y" customClass="CreateClassViewController" customModule="quan_ly" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hR9-n1-1Jj"/>
                         <viewControllerLayoutGuide type="bottom" id="Qdh-GE-1M4"/>
@@ -176,7 +176,7 @@
                                         <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wc2-5W-ibN" id="s7l-9e-41t">
-                                            <frame key="frameInset" width="320" height="43"/>
+                                            <frame key="frameInset" width="320" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Class name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeA-YX-fMW">
@@ -242,7 +242,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lPO-cj-rI6" id="lzm-cN-NAu">
-                                            <frame key="frameInset" width="320" height="77"/>
+                                            <frame key="frameInset" width="320" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lGf-ta-NZd">
