--- a/Lab1/Base.lproj/Main.storyboard
+++ b/Lab1/Base.lproj/Main.storyboard
@@ -135,52 +135,6 @@
                                 <frame key="frameInset" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PCV-MA-Xuq">
-                                <frame key="frameInset" minY="470" width="375" height="47"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lrJ-qO-dAc">
-                                        <frame key="frameInset" width="9" height="47"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qU-iT-2Fo">
-                                        <frame key="frameInset" minX="18" width="157" height="47"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Button"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cbX-QL-1Cz">
-                                        <frame key="frameInset" minX="183" width="9" height="47"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S5p-Vs-Chd">
-                                        <frame key="frameInset" minX="366" width="9" height="47"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coX-hu-aE3">
-                                        <frame key="frameInset" minX="201" width="157" height="47"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Button"/>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="cbX-QL-1Cz" firstAttribute="top" secondItem="PCV-MA-Xuq" secondAttribute="top" id="0aH-HH-r2w"/>
-                                    <constraint firstItem="lrJ-qO-dAc" firstAttribute="top" secondItem="PCV-MA-Xuq" secondAttribute="top" id="6fB-zR-bRg"/>
-                                    <constraint firstItem="coX-hu-aE3" firstAttribute="top" secondItem="PCV-MA-Xuq" secondAttribute="top" id="9Kc-Pt-MKe"/>
-                                    <constraint firstItem="cbX-QL-1Cz" firstAttribute="leading" secondItem="9qU-iT-2Fo" secondAttribute="trailing" id="I5X-NX-Vvg"/>
-                                    <constraint firstItem="lrJ-qO-dAc" firstAttribute="leading" secondItem="PCV-MA-Xuq" secondAttribute="leading" id="NKu-Q4-tgZ"/>
-                                    <constraint firstItem="9qU-iT-2Fo" firstAttribute="leading" secondItem="lrJ-qO-dAc" secondAttribute="trailing" id="Nen-Rz-x9Q"/>
-                                    <constraint firstAttribute="bottom" secondItem="9qU-iT-2Fo" secondAttribute="bottom" id="NlL-Fl-jPy"/>
-                                    <constraint firstAttribute="bottom" secondItem="coX-hu-aE3" secondAttribute="bottom" id="Pjz-4v-mgs"/>
-                                    <constraint firstItem="9qU-iT-2Fo" firstAttribute="top" secondItem="PCV-MA-Xuq" secondAttribute="top" id="QLN-Uc-EXb"/>
-                                    <constraint firstAttribute="trailing" secondItem="S5p-Vs-Chd" secondAttribute="trailing" id="UfX-qt-Meg"/>
-                                    <constraint firstAttribute="bottom" secondItem="S5p-Vs-Chd" secondAttribute="bottom" id="Upj-vS-Cu1"/>
-                                    <constraint firstItem="S5p-Vs-Chd" firstAttribute="leading" secondItem="coX-hu-aE3" secondAttribute="trailing" id="WtS-nQ-saz"/>
-                                    <constraint firstAttribute="bottom" secondItem="cbX-QL-1Cz" secondAttribute="bottom" id="gl3-HB-cvb"/>
-                                    <constraint firstItem="coX-hu-aE3" firstAttribute="leading" secondItem="cbX-QL-1Cz" secondAttribute="trailing" id="jLo-uy-Zvx"/>
-                                    <constraint firstItem="S5p-Vs-Chd" firstAttribute="top" secondItem="PCV-MA-Xuq" secondAttribute="top" id="lvY-bi-Tse"/>
-                                    <constraint firstAttribute="bottom" secondItem="lrJ-qO-dAc" secondAttribute="bottom" id="xeV-Ve-6Yq"/>
-                                </constraints>
-                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dup-hx-oPx"/>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RU0-qg-OKw">
                                 <frame key="frameInset" minX="119" minY="96" width="137" height="50"/>
@@ -189,40 +143,30 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZrP-Sk-QTJ">
-                                <frame key="frameInset" minY="534" width="375" height="47"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qU-iT-2Fo">
+                                <frame key="frameInset" minX="16" minY="470" width="157" height="47"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qCP-tx-jzO">
-                                        <frame key="frameInset" width="9" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zyd-aR-C0P">
-                                        <frame key="frameInset" minX="201" width="157" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Button"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5l1-HU-9r3">
-                                        <frame key="frameInset" minX="183" width="9" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GXL-Iz-UlQ">
-                                        <frame key="frameInset" minX="17" width="157" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Button"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jce-E0-XYK">
-                                        <frame key="frameInset" minX="366" width="9" height="47"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </view>
-                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coX-hu-aE3">
+                                <frame key="frameInset" minX="202" minY="470" width="157" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zyd-aR-C0P">
+                                <frame key="frameInset" minX="16" minY="534" width="157" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GXL-Iz-UlQ">
+                                <frame key="frameInset" minX="202" minY="534" width="157" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.85409816497079472" blue="0.24893639545642976" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
